# RatherLLM

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/kotlin/ratherllm/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: hardware_affinity.h  llama_engine.h  mllm_engine.h  neuropilot_adapter.h  uds_server.h
app/src/main/cpp/src/: hardware_affinity.cpp  jni_bridge.cpp  llama_engine.cpp  mllm_engine.cpp  neuropilot_adapter.cpp  uds_server.cpp
app/src/main/java/com/kotlin/ratherllm/: AppDrawer.kt  Attachments.kt  ChatExporter.kt  ChatModels.kt  ChatScreen.kt  Components.kt  ConversationStore.kt  DesignSystem.kt  DeviceAnalytics.kt  Dialogs.kt  ExperimentalScreen.kt  InferenceService.kt  MainActivity.kt  MarkdownText.kt  ModelDownloader.kt  ModelPicker.kt  ModelRepository.kt  ModelsScreen.kt  NativeBridge.kt  RatherLlmClient.kt  SettingsSheet.kt  Stores.kt  Theme.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/kotlin/ratherllm/: ExampleUnitTest.kt  LogicUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
